frontend/src/components/Link.css
h2 {
    margin: 0;
    font-size: 1.25rem;
    transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
}
p {
    margin-top: 0.5rem;
    margin-bottom: 0;
}
.link {
    border: 1px solid rgba(var(--accent), 25%);
    margin: 50px 0 0;
}
astro-island:first-of-type li.link {
    margin-top: 0;
}
.link.single {
    list-style: none;
}
.tag-icon {
    margin-left: 10px;
    margin-bottom: -5px;
}
.like-btn,
.copy-btn {
    display: inline-flex;
    align-items: center;
    gap: 5px;
    background-color: rgba(255 255 255 / 0.5);
}
.like-btn.liked,
.copy-btn.copied {
    background-color: rgba(var(--accent), 50%);
    color: white;
}
.preview {
    display: flex;
    gap: 20px;
}
.preview img {
    object-fit: cover;
}
.url {
    font-size: 0.9rem;
    line-height: 0.5;
    margin-bottom: 20px
}

